Make sure to request custom emojis with authorization

Apparently servers (like GoToSocial and Mastodon) can disallow
unauthorized API access, for example in this case for getting custom
emojis.

It only makes sense to call this with authorization, so let's just make
sure it does.

BUG: 495585
(cherry picked from commit 8b2ed52e4d87e32fbdf0dd5699a6afa556fe9231)